# paseo-sandbox

./: .gitignore  FEATURES.txt  README.md  ROADMAP.txt  TODO  VISION.txt  airbnb_medellin.json  package-lock.json  package.json  paseo.py  pyproject.toml
analysis/: buckets.js  features.js  filters.js  segment.js  stats.js
common/: listing.js  metadata.js  metadata.py
config/: airbnb.yml
dashboard/: app.py  callbacks.py  columns.py  data.py  figures.py  filters.py
data backup/output/: airbnb_medellin_ranked.csv  airbnb_medellin_ranked.json  airbnb_ranked.json
data backup/processed/: airbnb_likes.json  airbnb_medellin_features.csv  airbnb_medellin_features.json  airbnb_model.joblib  airbnb_predictions.json
data backup/raw/: airbnb_medellin.csv  airbnb_medellin.json  airbnb_medellin_features.csv
extractors/airbnb/: browser.js  extractor.js  process.js  schema.yml  scorer.js  searchUrl.js
extractors/facebook/: browser.js  cleaner.js  exporter.js  extractor.js  facebook_listings_1783967524875.json  validate_listings.js  validation_report.json  validator.js
extractors/fazwaz/: extractor.js
extractors/rentberry/: extractor.js
model/: evaluate.py  likes.py  paths.py  predictor.py  preprocessing.py  run_predictions.py  trainer.py
model/models/: base_model.py  likes.py  maximization.py  optimizaton.py  registry.py  value.py
paseo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
processing/: process.js  processor.js
scraper/: config_loader.py  engine.py  exporter.py  extractor.py  generic_scraper.py  run_scraper.py  schema.py
